refactor(swagger): subistituindo as annotations do metodo stoupdate a attibutes
